uclibc: updates for not (yet) used features
This commit bundles upstream changes:

* for features not used by L4Re,
* implemented differently on L4Re
* for architectures not currently supported by L4Re
* introducing new features / functions to uclibc-ng which are not used
  by L4Re (yet)

It includes the following commits:

--

posix_fadvise: handle 2 variants for SYSCALL_ALIGN_64BIT
sync_file_range: fix standard UCLIBC_SYSCALL_ALIGN_64BIT handling

Signed-off-by: Vineet Gupta <vgupta@synopsys.com>
Cc: Baruch Siach <baruch@tkos.co.il>
Cc: Max Filippov <jcmvbkbc@gmail.com>
Signed-off-by: Bernhard Reutner-Fischer <rep.dot.nop@gmail.com>

--

sparc/clone.S: guard tcb-offsets.h include with RESET_PID

Signed-off-by: Gustavo Zacarias <gustavo@zacarias.com.ar>
Signed-off-by: Bernhard Reutner-Fischer <rep.dot.nop@gmail.com>

--

libc: update strverscmp
libc: add getrandom(2)
SH: add 't' to syscall clobber list
NPTL: SH: silence warning
libc: Fix page-size in getifaddrs()
librt: Add missing __dso_handle
nptl_db: fix ommitting td_ta_setconcurrency
getconf.c: undef VERSION

Signed-off-by: Bernhard Reutner-Fischer <rep.dot.nop@gmail.com>

--

nptl/atfork: Hide pthread_atfork in shared versions

Signed-off-by: Khem Raj <raj.khem@gmail.com>
Signed-off-by: Bernhard Reutner-Fischer <rep.dot.nop@gmail.com>

--

init.c (__nptl_initial_report_events): New variable.

Signed-off-by: Roland McGrath <roland@gnu.org>
Signed-off-by: Sheng Yong <shengyong1@huawei.com>
Signed-off-by: Bernhard Reutner-Fischer <rep.dot.nop@gmail.com>

--

Fix libgcc_s_resume issue with gcc 5.1

Signed-off-by: Thomas Petazzoni <thomas.petazzoni@free-electrons.com>

--

nptl_db/db_info: fix the incorrect initial size for dtvp

Signed-off-by: Junling Zheng <zhengjunling@huawei.com>

--

libc: fix setting return value and errno in fallocate()
libc: fix sign extension in fallocate()
libc: posix_fallocate must return an error number on failure

Signed-off-by: Yuriy Kolerov <yuriy.kolerov@synopsys.com>

--

fanotify:

--- a/uclibc/lib/contrib/uclibc/Makefile.in
+++ b/uclibc/lib/contrib/uclibc/Makefile.in
@@ -311,6 +311,7 @@ HEADERS_RM-$(UCLIBC_LINUX_SPECIFIC)          += \
 	sys/perm.h \
 	sys/personality.h \
 	sys/prctl.h \
+	sys/random.h \
 	sys/reboot.h \
 	sys/sendfile.h \
 	bits/signalfd.h \
