uclibc: changes to upstream files not used by L4Re
This commit collects all upstream changes to files, features and
architectures that are not currently used or supported by L4re as well
as changes to the upstream buildsystem not used by L4Re.

* changes to architectures not supported by L4re

 arc: minor cleanup for ARCv2
 arc: add asm macros
 arc: add support for ARCv3 32-bit processors
 arc: add optimized string functions for ARCv3
 arc: add acq/rel variants for atomic cmpxchg/xchg
 arc: remove read ahead in asm strcmp code for ARCHS
 c6x compile fix vdso support
 kvx: add support for kv3-2 (Coolidge v2 SoC)
 kvx: atomic: rework using compiler builtins
 kvx: align specification of user regs
 kvx: define that kvx port supports statx syscall
 kvx: use a custom stat.h header
 kvx: fix asm syntax
 ppc: Static pie support for ppc
 powerpc: fix conflicting definitions with newer Linux kernel
 xtensa: ldso: make GOT protection adjustment conditional
 xtensa: drop ARCH_NEEDS_BOOTSTRAP_RELOCS
 xtensa: add static pie support

* changes to the upstream buildsystem not used by L4Re

 Added some documentation on how to add static-pie support to the porting guide
 ldso: arc: add compiler option check
 getauxval: remove header for static builds
 vdso support for x86_64
 gitignore
 lm32: disable ctor/dtor

* changes to features not used / supported by L4Re

 sycall macro for vdso support
 gettimeofday() vdso support
 Fix for CVE-2022-29503.
 Emulate 'futimesat' when __NR_futimesat is not available.
 gettimeofday: fix static build
 Revert "librt: avoid compilation error"
 Fix compilation error on noMMU/nothread systems with old compilers
 linuxthreads/signal: improve sigaction behavior
 gettimeofday() only include ldso.h if vdso support is activated
 daemon.c: make _fork_parent static inline again
 fstatat64: define it as a wrapper of statx if the kernel does not support fstatat64 syscall
 fstat: add missing return value statement for the statx wrapping case
 add support for syst

--- a/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
+++ b/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
@@ -332,7 +332,9 @@ config DOPIC
 config STATIC_PIE
 	bool "Add support for Static Position Independent Executables (PIE)"
 	default n
-	depends on DOPIC && !UCLIBC_FORMAT_FDPIC_ELF && (TARGET_arm || TARGET_i386 || TARGET_x86_64 || TARGET_aarch64 || TARGET_mips)
+	depends on DOPIC && !UCLIBC_FORMAT_FDPIC_ELF && \
+		(TARGET_arm || TARGET_i386 || TARGET_x86_64 || TARGET_aarch64 || \
+		 TARGET_mips || TARGET_xtensa || TARGET_powerpc)
 
 config ARCH_HAS_NO_SHARED
 	bool
@@ -537,7 +539,7 @@ config LDSO_LD_LIBRARY_PATH
 
 config UCLIBC_CTOR_DTOR
 	bool
-	default y if !TARGET_riscv64
+	default y if !TARGET_riscv64 && !TARGET_lm32
 	help
 	  If you wish to build uClibc with support for global constructor
 	  (ctor) and global destructor (dtor) support, then answer Y here.
@@ -642,6 +644,15 @@ config PTHREADS_DEBUG_SUPPORT
 	  If you are doing development and want to debug applications using
 	  uClibc's pthread library, answer Y.  Otherwise, answer N.
 
+config PTHREADS_STACK_DEFAULT_SIZE
+	int "Default thread stack size"
+	default 4194304 if TARGET_alpha # 4 MiB
+	default 4194304 if TARGET_powerpc # 4 MiB
+	default 2097152 # 2 MiB
+	help
+	  Set the default thread stack size. This option is useful on MMU-less
+	  systems where the stack size is fixed and the default stack size may
+	  be excessively large and waste memory.
 
 config UCLIBC_HAS_SYSLOG
 	bool "Syslog support"
